fix import.sql